# cifrados-clasicos

./: .gitignore  LICENSE  README.md  meson.build
ADFGX/: main.cpp
Alberti/: main.cpp
CT-46/: main.cpp
Cesar/: main.cpp
ChiSq/: main.cpp
Coincidence/: main.cpp
Common/: strprocess.cpp  strprocess.hpp  transpose.cpp  transpose.hpp
Hill/: main.cpp
Homophonic/: main.cpp
Kasiski/: main.cpp
Kerchoff/: main.cpp
Kullback/: main.cpp  main2.cpp
NumPer/: main.cpp
Playfair/: main.cpp
Polybius/: main.cpp
Porta/: main.cpp
Shuffle/: main.cpp
ShuffleInterrupted/: main.cpp
ShuffleInterruptedFill/: main.cpp
StraddlingCheckerboard/: main.cpp
Trasposition/: main.cpp
Ubchi/: main.cpp
Vernam/: main.cpp
Vigenere/: main.cpp
targetfiles/: x86_64-apple-darwin
