project('seg-utils', 'cpp', default_options: ['cpp_std=c++20'])

sources_cesar = [
	'Cesar/main.cpp',
	'Common/strprocess.cpp'
]

sources_alberti = [
	'Alberti/main.cpp',
	'Common/strprocess.cpp'
]

sources_portabellaso = [
	'Porta/main.cpp',
	'Common/strprocess.cpp'
]

sources_vigenere = [
	'Vigenere/main.cpp',
	'Common/strprocess.cpp'
]

sources_adfgx = [
	'ADFGX/main.cpp',
	'Common/transpose.cpp',
	'Common/strprocess.cpp'
]

sources_ubchi = [
	'Ubchi/main.cpp',
	'Common/transpose.cpp',
	'Common/strprocess.cpp'
]

sources_shuffle = [
	'Shuffle/main.cpp',
	'Common/strprocess.cpp'
]

sources_homophonic = [
	'Homophonic/main.cpp',
	'Common/strprocess.cpp'
]

sources_shuffle_interrupted = [
	'ShuffleInterrupted/main.cpp',
	'Common/strprocess.cpp',
	'Common/transpose.cpp'
]

sources_shuffle_interrupted_fill = [
	'ShuffleInterruptedFill/main.cpp',
	'Common/strprocess.cpp',
	'Common/transpose.cpp'
]

sources_vernam = [
	'Vernam/main.cpp',
	'Common/strprocess.cpp'
]

sources_kasiski = [
	'Kasiski/main.cpp',
	'Common/strprocess.cpp'
]

sources_coincidence = [
	'Coincidence/main.cpp',
	'Common/strprocess.cpp'
]

sources_kerchoff = [
	'Kerchoff/main.cpp',
	'Common/strprocess.cpp'
]

sources_kullback = [
	'Kullback/main.cpp',
	'Common/strprocess.cpp'
]

sources_trasposition = [
	'Trasposition/main.cpp',
	'Common/strprocess.cpp',
	'Common/transpose.cpp'
]

sources_playfair = [
	'Playfair/main.cpp',
	'Common/strprocess.cpp'
]

sources_hill = [
	'Hill/main.cpp',
	'Common/strprocess.cpp'
]

sources_polybius = [
	'Polybius/main.cpp',
	'Common/strprocess.cpp'
]

sources_ct46 = [
	'CT-46/main.cpp',
	'Common/strprocess.cpp'
]

sources_straddlingcheckerboard = [
	'StraddlingCheckerboard/main.cpp',
	'Common/strprocess.cpp'
]

sources_chisquared = [
	'ChiSq/main.cpp',
	'Common/strprocess.cpp'
]

sources_numper = [
	'NumPer/main.cpp',
	'Common/strprocess.cpp'
]

executable('cesar', sources_cesar)
executable('alberti', sources_alberti)
executable('porta', sources_portabellaso)
executable('vigenere', sources_vigenere)
executable('adfgx', sources_adfgx)
executable('ubchi', sources_ubchi)
executable('shuffle', sources_shuffle)
executable('homophonic', sources_homophonic)
executable('shuffle_interrupted', sources_shuffle_interrupted)
executable('shuffle_interrupted_fill', sources_shuffle_interrupted_fill)
executable('vernam', sources_vernam)
executable('kasiski', sources_kasiski)
executable('coincidence', sources_coincidence)
executable('kerchoff', sources_kerchoff)
executable('kullback', sources_kullback)
executable('trasposition', sources_trasposition)
executable('playfair', sources_playfair)
executable('hill', sources_hill)
executable('polybius', sources_polybius)
executable('ct46', sources_ct46)
executable('straddlingcheckerboard', sources_straddlingcheckerboard)
executable('chisquared', sources_chisquared)
executable('numper', sources_numper)